# ARWD-Scraping-Pipeline

./: .env.example  .gitignore  .pre-commit-config.yaml  .safety-project.ini  README.md  pyproject.toml  sessions_dict.json  test_bill_text.txt
cache/: state_cache.json
db/: bootstrap_db_and_users.sql
db/ddl/: enums.sql  tables.sql
scripts/: _update_pg_hba.sh  bootstrap_db.sh  init_sql_functions.sh
sql/: bootstrap_db_and_users.sql
sql/ddl/: enums.sql  tables.sql
sql/dml/: upsert_committee.sql  upsert_legislator.sql
sql/dml/functions/: close_missing_legislators.sql  insert_session.sql  upsert_bill_votes.sql  upsert_bill_with_sponsors.sql  upsert_committee.sql  upsert_legislator.sql
src/: bootstrap_sessions.py  entrypoint.sh  main.py
src/config/: pipeline_enums.py  registry_config.py  settings.py
src/data_pipeline/: orchestrate.py
src/data_pipeline/extract/: WebCrawler.py  extract_parse_content.py  html_parser.py  webcrawler.py
src/data_pipeline/extract/fetching_templates/: arkleg_fetchers.py
src/data_pipeline/extract/selector_templates/: ArStateLegislatorSelector.py
src/data_pipeline/load/: download_pdf.py  pipeline_loader.py
src/data_pipeline/transform/: PipelineTransformer.py  pipeline_transformer.py
src/data_pipeline/transform/utils/: cast_to_int.py  empty_transform.py  first_el_from_list.py  normalize_list_of_str.py  normalize_list_of_str_link.py  normalize_str.py  strip_session_from_string.py  transform_leg_title.py  transform_phone.py  transform_str_to_date.py
src/data_pipeline/utils/: fetch_scheduler.py
src/data_pipeline/validate/: pipeline_validator.py
src/data_pipeline/validate/models/: chamber_enum.py
src/data_pipeline/validate/utils/: validate_path_str.py  validate_url_str.py
src/models/: SelectorTemplate.py  TransformerTemplate.py  selector_template.py  transformer_template.py
src/pdf_process/: pdf_processor.py
src/services/: db_connect.py
src/structures/: directed_graph.py  indexed_tree.py  registries.py
src/utils/: json_list.py  logger.py  paths.py
src/utils/custom_exceptions/: indexed_tree_exceptions.py
src/utils/strings/: get_url_base_path.py  normalize_url.py
src/workers/: base_worker.py  pipeline_workers.py
test/: conftest.py  fixture_params.py  selector_config.py
test/integration_test/: test_create_fixtures.py
test/integration_test/src/data_pipeline/: test_pipeline.py
test/unit_test/src/utils/: test_cast_to_int.py  (+4 more)
tests/: conftest.py  fixture_params.py  selector_config.py
tests/configs/: html_fixture_params.py  pipeline_integration_config.py  selector_config.py  transform_fixture_params.py  transformer_config.py  validator_config.py  validator_fixture_params.py
tests/e2e/: conftest.py  test_orchestrator.py
tests/unit_test/sql/: conftest.py
(+121 files in other folders)
