[project]
name = "pythonproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "pre-commit>=4.5.0",
    "pytest>=9.0.1",
    "ruff>=0.14.6",
]

[tool.ruff]
line-length = 100
extend-exclude = ['.venv', '__pycache__', '.html', '.log', '.ini']
[tool.ruff.format]
quote-style = 'single'
indent-style = 'tab'
docstring-code-format = true
[tool.ruff.lint]
select = ['E', 'F', 'D', 'I']
ignore = ["E701", "D212", "D203"]
[tool.ruff.lint.per-file-ignores]
"tests/*" = ['D']
"__init__.py" = ['D']

[tool.black]
line-length = 100
target-version = ['py313']
extend-exclude = """
(
    .git
   | .html
   | .venv
   | .log
   | .ini
)
"""
